welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:38: error: illegal start of simple expression
  for (i <- 1 to 5 avance);
                          ^